--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Tutorial</title>
+    <style>
+      html,body {
+        background-color: black;
+        padding: 0;
+        margin: 0;
+      }
+    </style>
   </head>
 
   <body>
