--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Tutorial</title>
     <style>
-      html,body {
+      html,
+      body {
         background-color: black;
         padding: 0;
         margin: 0;
